<resources>
    <string name="app_name">LogPlus</string>
    <string name="c_yesterday">Yesterday: </string>
    <string name="check_m_new_task">new timer</string>
    <string name="comment_label">Comment:</string>
    <string name="count_m_new">new count</string>
    <string name="count_m_edit">edit count</string>
    <string name="duration_label">Duration:</string>
    <string name="e_a_n_hint">target before time</string>
    <string name="e_d_hint">duration in seconds</string>
    <string name="e_n_hint">timer name</string>
    <string name="e_r_hint">repeats per time frame</string>
    <string name="e_t_start">set time</string>
    <string name="error_init">Error in initializing data</string>
    <string name="justlog">new log entry</string><!--justlog to newlog, edit to edittimer, new to newtimer? -->
    <string name="log_added">log</string>
    <string name="logs_export">export logs to file</string>
    <string name="n_snooze">SNOOZE</string>
    <string name="n_stop">STOP</string>
    <string name="name_label">Name:</string>
    <string name="name_longer">length > 0</string>
    <string name="name_exists">already exists</string>
    <string name="nextEntry">Next entry</string>
    <string name="positive_number">positive number</string>
    <string name="previousEntry">Previous Entry</string>
    <string name="reminder_label">Target Time:</string>
    <string name="repetitions_label">Repetitions:</string>
    <string name="s_name">State</string>
    <string name="saved">saved</string>
    <string name="saved_not">not saved</string>
    <string name="settings">Settings</string>
    <string name="setAlarmActivity">Set Alarm</string>
    <string name="t_check">show check</string>
    <string name="t_count">show count</string>
    <string name="t_logs">show logs</string>
    <string name="t_nag">show nag</string>
    <string name="t_nag_reminder">show reminder-nag</string>
    <string name="t_timer">show timer</string>
    <string name="t_wakeup">show wakeup</string>
    <string name="t_reset">RESET</string>
    <string name="t_start">START</string>
    <string name="target_label">Target:</string>
    <string name="te_name">default timer</string>
    <string name="test">test</string>
    <string name="timer_m_delete">delete timer</string>
    <string name="timer_m_edit">edit timer</string>
    <string name="timer_m_new">new timer</string><!-- td: merge w/ new task-->
    <string name="w_latitude">enter latitude</string>
    <string name="w_longitude">enter longitude</string>
    <string name="w_set">set position</string>
    <string name="title_activity_alarm">AlarmActivity</string>
    <string name="edit_alarm">Press to edit Alarm</string>
    <string name="duration_hint">in seconds</string>
</resources>
    <!--td: find unused resources, SO?-->
