<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_height="fill_parent"
    android:layout_width="fill_parent"
    >
  <Button
      android:layout_height="wrap_content"
      android:layout_width="wrap_content"
      android:onClick="pressCheck"
      android:text="@string/t_check"
      />
  <Button
      android:layout_height="wrap_content"
      android:layout_width="wrap_content"
      android:onClick="pressCount"
      android:text="@string/t_count"
      />
  <Button
      android:layout_height="wrap_content"
      android:layout_width="wrap_content"
      android:onClick="pressLog"
      android:text="@string/t_logs"
      />
  <Button
      android:layout_height="wrap_content"
      android:layout_width="wrap_content"
      android:onClick="pressNag"
      android:text="@string/t_nag"
      />
  <Button
      android:layout_height="wrap_content"
      android:layout_width="wrap_content"
      android:onClick="pressNagReminder"
      android:text="@string/t_nag_reminder"
      />
  <Button
      android:layout_height="wrap_content"
      android:layout_width="wrap_content"
      android:onClick="pressTimer"
      android:text="@string/t_timer"
      />
  <Button
      android:layout_height="wrap_content"
      android:layout_width="wrap_content"
      android:onClick="pressWakeup"
      android:text="@string/t_wakeup"
      />
</LinearLayout>
