<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
  <LinearLayout
      android:id="@+id/n_remind"
      android:orientation="horizontal"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_weight="1"
      android:visibility="gone"
      >
    <TextView
        android:id="@+id/n_remindtext"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:text="TODO: not set"
      />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:onClick="pressGoCheck"
        android:text="@string/reminder_label"
        />
  </LinearLayout>
  <Button
      android:id="@+id/n_snooze"
      android:layout_width="fill_parent" 
      android:layout_height="wrap_content" 
      android:layout_weight="1"
      android:onClick="pressSnooze"
      android:text="@string/n_snooze"
      />
  <Button 
      android:id="@+id/n_stop"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:onClick="pressStop"
      android:text="@string/n_stop"
      android:layout_weight="1"
      />
</LinearLayout>
